feat: add basic page structure

--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -3,5 +3,5 @@ import Layout from "@/layout/default.astro";
 ---
 
 <Layout>
-  <h1 class="text-2xl font-bold">Home</h1>
+  <h1 class="text-2xl font-bold">Datenschutz</h1>
 </Layout>
