--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,257 @@ import Layout from "@/layout/default.astro";
 ---
 
 <Layout>
-  <h1 class="text-2xl font-bold">Home</h1>
+  <section class="relative py-32">
+    <h1 class="mb-8 w-3/5 text-6xl font-black text-gray-900">
+      Länderübergreifendes Engagement für Deutschland, Frankreich und die
+      Schweiz
+    </h1>
+    <p class="mb-8 w-1/2 text-xl">
+      Regio Lions ist ein Verbund von mehreren Lions Clubs aus dem Dreiländereck
+      Deutschland, Schweiz und Frankreich mit dem Ziel, gemeinsame Aktivities,
+      wie z. B. den 3-Länderlauf oder einen Stand bei "Em Bebbi sy Jazz!" in
+      Basel, zu organisieren.
+    </p>
+    <div>
+      <a
+        href="/news"
+        class="inline-flex h-12 items-center rounded-md bg-gray-900 px-6 font-medium text-white"
+        >Unsere letzten Aktivitäten &rarr;</a
+      >
+    </div>
+    <img
+      src="https://placehold.co/500x450"
+      class="absolute right-0 top-0 w-2/5 translate-y-1/2 rounded-xl"
+      alt="placeholder image for later purposes"
+      width="500"
+      height="450"
+    />
+  </section>
+
+  <section class="py-48">
+    <h2 class="mb-8 text-5xl font-black text-gray-900">Wer sind wir?</h2>
+    <div class="flex gap-16">
+      <div class="w-3/5">
+        <p class="mb-8 text-xl">
+          Lions Clubs International ist eine weltweite Vereinigung freier
+          Menschen, die in freundschaftlicher Verbundenheit bereit sind, sich
+          den gesellschaftlichen Problemen unserer Zeit zu stellen und
+          uneigennützig an ihrer Lösung mitzuwirken.
+        </p>
+        <p class="mb-8">
+          Schon in der Vergangenheit gab es Kontaktversuche der Clubs der 3
+          Länder, jedoch ohne Erfolg. Durch einen Vorstoß von André Tritz -
+          damaliger Präsident des Lions Clubs Saint Louis - und der Akzeptanz
+          anderer regionaler Clubs kam es 2007 schließlich zur Gründung der
+          Regio Lions.
+        </p>
+        <p>
+          Dank internationaler Bemühungen und dem Engagement einiger besonderer
+          Personen ist ein starker Verbund, bestehend aus 17 Clubs aus den
+          Dreiländereck, entstanden. Wir sind maßgeblich für die Ausrichtung
+          diverse trinationaler Aktivitäten verantwortlich: der 3-Länderlauf in
+          Basel, Sommercamps mit Jugendlichen auf einem Bauernhof in der
+          Schweiz, trinationale Hausbooten mit Jugendlichen in Frankreich oder
+          die Teilnahme am "Em Bebbi sy Jazz!" in Basel.
+        </p>
+      </div>
+
+      <ul class="w-2/5 space-y-8">
+        <li class="text-xl">
+          <span class="mb-2 block text-4xl font-bold text-gray-900">17</span>
+          teilnehmende Clubs aus den 3 Ländern
+        </li>
+        <li class="text-xl">
+          <span class="mb-2 block text-4xl font-bold text-gray-900">100</span>
+          durchgeführte Aktionen seit Gründung
+        </li>
+        <li class="text-xl">
+          <span class="mb-2 block text-4xl font-bold text-gray-900"
+            >40.000 €</span
+          >
+          an gesammelten Spenden
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <img
+    src="https://placehold.co/1200x450"
+    alt="placeholder image for later purposes"
+    width="1200"
+    height="450"
+    class="w-full rounded-xl"
+  />
+
+  <section class="py-48">
+    <h2 class="mb-8 text-5xl font-black text-gray-900">Unsere Ziele</h2>
+    <p class="mb-12 w-1/2 text-xl">
+      Wie jede Organisation verfolgen auch wir gewisse Ziele, welche wir mit
+      unseren Aktivitäten umsetzen. Diese Ziele definieren und motivieren uns
+      für den ehrenamtlichen Einsatz.
+    </p>
+
+    <ul class="grid grid-cols-3 gap-8">
+      <li>
+        <h3 class="mb-2 text-2xl font-bold text-gray-900">Zusammen arbeiten</h3>
+        Kontakte zwischen den Lions Clubs der drei Länder (Deutschland, Frankreich,
+        Schweiz) schaffen, verbessern und vereinfachen.
+      </li>
+      <li>
+        <h3 class="mb-2 text-2xl font-bold text-gray-900">
+          Grenzen überwinden
+        </h3>
+        Wie der Lions Club International verfolgen auch wie die Verbesserung der
+        Beziehungen zwischen den Völkern.
+      </li>
+      <li>
+        <h3 class="mb-2 text-2xl font-bold text-gray-900">
+          3-Länderlauf unterstützen
+        </h3>
+        Die Unterstützung des grenzüberschreitenden Volkslaufs nutzen wir als Einnahmequelle,
+        um unsere Aktivitäten zu finanzieren.
+      </li>
+      <li>
+        <h3 class="mb-2 text-2xl font-bold text-gray-900">
+          "Laufend" gutes tun
+        </h3>
+        Ziel ist es, Menschen aus der Region nicht bloß durch Geldspenden, sondern
+        durch selbst durchgeführte Aktivitäten zu unterstützen.
+      </li>
+      <li>
+        <h3 class="mb-2 text-2xl font-bold text-gray-900">Bekannt machen</h3>
+        Jeder kann helfen und sich engagieren. Mit unserer Arbeit hoffen wir dies
+        in der Region bekannt machen zu können.
+      </li>
+      <li>
+        <h3 class="mb-2 text-2xl font-bold text-gray-900">Kindern helfen</h3>
+        Wir erarbeiten Finanzmittel um ein zweisprachiges, trinationales Ferienlager
+        zu Gunsten von Kindern der Region zu finanzieren.
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 class="mb-8 text-5xl font-black text-gray-900">Aktuelle News</h2>
+    <p class="mb-12 w-1/2 text-xl">
+      Lesen Sie hier mehr zu unseren aktuellen Aktivitäten und was wir in
+      letzter Zeit gemacht haben.
+    </p>
+
+    <div class="grid grid-cols-3 gap-8">
+      <article
+        class="relative overflow-hidden after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/50"
+      >
+        <img
+          src="https://placehold.co/400x400"
+          alt="placeholder image for later purposes"
+          width="400"
+          height="400"
+          class="rounded-xl"
+        />
+        <div class="absolute inset-0 z-10 flex flex-col justify-end p-8">
+          <time datetime="" class="mb-1 text-gray-200">13. Januar 2023</time>
+          <h3 class="text-xl font-bold">
+            <a href="/news/test" class="text-white after:absolute after:inset-0"
+              >Adventskalender 2023</a
+            >
+          </h3>
+        </div>
+      </article>
+
+      <article
+        class="relative overflow-hidden after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/50"
+      >
+        <img
+          src="https://placehold.co/400x400"
+          alt="placeholder image for later purposes"
+          width="400"
+          height="400"
+          class="rounded-xl"
+        />
+        <div class="absolute inset-0 z-10 flex flex-col justify-end p-8">
+          <time datetime="" class="mb-1 text-gray-200">13. Januar 2023</time>
+          <h3 class="text-xl font-bold">
+            <a href="/news/test" class="text-white after:absolute after:inset-0"
+              >Freudiges Ziehen am selben Strang: trinationale Hausbootfahrt
+              2023
+            </a>
+          </h3>
+        </div>
+      </article>
+
+      <article
+        class="relative overflow-hidden after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/50"
+      >
+        <img
+          src="https://placehold.co/400x400"
+          alt="placeholder image for later purposes"
+          width="400"
+          height="400"
+          class="rounded-xl"
+        />
+        <div class="absolute inset-0 z-10 flex flex-col justify-end p-8">
+          <time datetime="" class="mb-1 text-gray-200">13. Januar 2023</time>
+          <h3 class="text-xl font-bold">
+            <a href="/news/test" class="text-white after:absolute after:inset-0"
+              >3-Länderlauf 2023</a
+            >
+          </h3>
+        </div>
+      </article>
+    </div>
+
+    <div class="mt-12 text-center">
+      <a
+        href="/news"
+        class="inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      >
+        Mehr News finden Sie hier &rarr;
+      </a>
+    </div>
+  </section>
+
+  <section class="grid grid-cols-2 gap-16 pt-48">
+    <div>
+      <h2 class="mb-8 text-5xl font-black text-gray-900">Unsere Mittel</h2>
+      <p class="mb-12 text-xl">
+        Erfahren Sie mehr über die Bedingungen unserer einzelnen Clubs, damit
+        wir als Gemeinschaft Erfolg haben.
+      </p>
+      <img
+        src="https://placehold.co/500x600"
+        alt="placeholder image for later purposes"
+        width="500"
+        height="600"
+        class="rounded-xl"
+      />
+    </div>
+
+    <ul class="mt-64 list-disc space-y-6">
+      <li>
+        Jeder Lions Club beteiligt sich mit 500€ am Sponsoring oder Patronat des
+        3-Länderlaufes.
+      </li>
+      <li>
+        Die Organisation des Rennens zahlt den Regio Lions einen Betrag von 2
+        CHF pro Teilnehmer zurück.
+      </li>
+      <li>
+        Am Tag des Laufes befindet sich ein Ausschank-Stand auf dem
+        Basler-Marktplatz.
+      </li>
+      <li>
+        Es gibt 1 - 2 Regio-Beauftragte pro Club. Am besten bleiben sie mehrere
+        Jahre in ihrem Amt.
+      </li>
+      <li>
+        Der 3-Länderlauf ist ebenfalls ein Spenden-Lauf. Jeder Teilnehmer darf
+        auch mehr als sein Anmeldungsgeld entrichten.
+      </li>
+      <li>
+        Wenn ein neuer Sponsor dank einem Lions-Mitglied gefunden wird, kommt
+        20% des Betrages zu Gunsten der Regio Lions.
+      </li>
+    </ul>
+  </section>
 </Layout>
