--- a/src/pages/news.astro
+++ b/src/pages/news.astro
@@ -1,7 +1,171 @@
 ---
+import Hero from "@/components/hero.astro";
 import Layout from "@/layout/default.astro";
 ---
 
 <Layout>
-  <h1 class="text-2xl font-bold">News</h1>
+  <Hero title="Aktuelle News">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor esse
+    tenetur, blanditiis excepturi minus expedita labore distinctio. Odio cumque
+    maiores aliquid consectetur aliquam labore quidem asperiores magni culpa,
+    amet ut!
+  </Hero>
+
+  <article class="mb-16 flex gap-x-12">
+    <img
+      src="https://placehold.co/250x250"
+      alt="placeholder image for later purposes"
+      width="250"
+      height="250"
+      class="rounded-xl"
+    />
+    <div>
+      <time datetime="">13. Januar 2023</time>
+      <h2 class="mb-6 mt-1 text-xl font-bold text-gray-900">
+        <a href="/news/test">THis is a convincing title</a>
+      </h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quidem
+        error quam temporibus porro soluta magnam animi, exercitationem nesciunt
+        inventore non? Porro sapiente nam quo facere? Rem suscipit dicta iure.
+      </p>
+      <a
+        href="/news"
+        class="mt-6 inline-block rounded-md bg-gray-200 px-6 py-3 font-medium text-gray-900"
+      >
+        Weiterlesen &rarr;
+      </a>
+    </div>
+  </article>
+
+  <article class="mb-16 flex gap-x-12">
+    <img
+      src="https://placehold.co/250x250"
+      alt="placeholder image for later purposes"
+      width="250"
+      height="250"
+      class="rounded-xl"
+    />
+    <div>
+      <time datetime="">13. Januar 2023</time>
+      <h2 class="mb-6 mt-1 text-xl font-bold text-gray-900">
+        THis is a convincing title
+      </h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quidem
+        error quam temporibus porro soluta magnam animi, exercitationem nesciunt
+        inventore non? Porro sapiente nam quo facere? Rem suscipit dicta iure.
+      </p>
+      <a
+        href="/news"
+        class="mt-6 inline-block rounded-md bg-gray-200 px-6 py-3 font-medium text-gray-900"
+      >
+        Weiterlesen &rarr;
+      </a>
+    </div>
+  </article>
+
+  <article class="mb-16 flex gap-x-12">
+    <img
+      src="https://placehold.co/250x250"
+      alt="placeholder image for later purposes"
+      width="250"
+      height="250"
+      class="rounded-xl"
+    />
+    <div>
+      <time datetime="">13. Januar 2023</time>
+      <h2 class="mb-6 mt-1 text-xl font-bold text-gray-900">
+        THis is a convincing title
+      </h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quidem
+        error quam temporibus porro soluta magnam animi, exercitationem nesciunt
+        inventore non? Porro sapiente nam quo facere? Rem suscipit dicta iure.
+      </p>
+      <a
+        href="/news"
+        class="mt-6 inline-block rounded-md bg-gray-200 px-6 py-3 font-medium text-gray-900"
+      >
+        Weiterlesen &rarr;
+      </a>
+    </div>
+  </article>
+
+  <article class="mb-16 flex gap-x-12">
+    <img
+      src="https://placehold.co/250x250"
+      alt="placeholder image for later purposes"
+      width="250"
+      height="250"
+      class="rounded-xl"
+    />
+    <div>
+      <time datetime="">13. Januar 2023</time>
+      <h2 class="mb-6 mt-1 text-xl font-bold text-gray-900">
+        THis is a convincing title
+      </h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quidem
+        error quam temporibus porro soluta magnam animi, exercitationem nesciunt
+        inventore non? Porro sapiente nam quo facere? Rem suscipit dicta iure.
+      </p>
+      <a
+        href="/news"
+        class="mt-6 inline-block rounded-md bg-gray-200 px-6 py-3 font-medium text-gray-900"
+      >
+        Weiterlesen &rarr;
+      </a>
+    </div>
+  </article>
+
+  <article class="mb-16 flex gap-x-12">
+    <img
+      src="https://placehold.co/250x250"
+      alt="placeholder image for later purposes"
+      width="250"
+      height="250"
+      class="rounded-xl"
+    />
+    <div>
+      <time datetime="">13. Januar 2023</time>
+      <h2 class="mb-6 mt-1 text-xl font-bold text-gray-900">
+        THis is a convincing title
+      </h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quidem
+        error quam temporibus porro soluta magnam animi, exercitationem nesciunt
+        inventore non? Porro sapiente nam quo facere? Rem suscipit dicta iure.
+      </p>
+      <a
+        href="/news"
+        class="mt-6 inline-block rounded-md bg-gray-200 px-6 py-3 font-medium text-gray-900"
+      >
+        Weiterlesen &rarr;
+      </a>
+    </div>
+  </article>
+
+  <nav class="flex justify-center gap-x-1">
+    <a
+      href="/news"
+      class="mt-6 inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      >1</a
+    >
+    <a
+      href="/news"
+      class="mt-6 inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      >2</a
+    >
+    <a
+      href="/news"
+      class="mt-6 inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      >3</a
+    >
+    <a
+      href="/news"
+      class="mt-6 inline-block rounded-md bg-gray-900 px-6 py-3 font-medium text-white"
+      >4</a
+    >
+  </nav>
 </Layout>
