--- a/src/layout/default.astro
+++ b/src/layout/default.astro
@@ -1,11 +1,22 @@
+---
+import Header from "@/components/header.astro";
+import Footer from "@/components/footer.astro";
+---
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Regio Lions</title>
   </head>
-  <body>
-    <slot />
+  <body class="leading-relaxed text-gray-600">
+    <Header />
+
+    <main class="mx-auto max-w-7xl px-8">
+      <slot />
+    </main>
+
+    <Footer />
   </body>
 </html>
 
@@ -18,21 +29,8 @@
       local("Roboto"),
       local("Roboto-Regular"),
       url(/fonts/roboto.woff2) format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
-      U+2122, U+2212, U+2215;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 300;
-    src:
-      local("Roboto Light"),
-      local("Roboto-Light"),
-      url(/fonts/roboto-light.woff2) format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
-      U+2122, U+2212, U+2215;
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
     font-display: swap;
   }
 
@@ -44,8 +42,34 @@
       local("Roboto Bold"),
       local("Roboto-Bold"),
       url(/fonts/roboto-bold.woff2) format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
-      U+2122, U+2212, U+2215;
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    src:
+      local("Roboto Medium"),
+      local("Roboto-Medium"),
+      url(/fonts/roboto-medium.woff2) format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 900;
+    src:
+      local("Roboto Black"),
+      local("Roboto-Black"),
+      url(/fonts/roboto-black.woff2) format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
     font-display: swap;
   }
 </style>
